--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -10,6 +10,9 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
+        {% block menu %}
+            {% include '::menu.html.twig' %}
+        {% endblock %}
         <div class="container">
         {% block body %}{% endblock %}
         </div>
