normalement ca marche

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -10,12 +10,25 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
+    <div class="container">
+        <div class="row">
+        <div class="logo col-lg-4">
+            <img src="{{ asset('bundles/ecmhome/images/logo-ecmchess.png') }}" alt="Logo Ecmchess">
+        </div>
+        <div class="col-lg-8">
         {% block menu %}
             {% include '::menu.html.twig' %}
         {% endblock %}
-        <div class="container">
-        {% block body %}{% endblock %}
         </div>
+        </div>
+    </div>
+    <div class="container" id="wrapper">
+        <div class="page-header">
+            {% block titre %}
+            {% endblock %}
+        </div>
+        {% block body %}{% endblock %}
+    </div>
         {% block footer %}
             <div class="footer">
                 <div class="container">
