--- a/src/ECM/Bundle/HomeBundle/Resources/views/Default/index.html.twig
+++ b/src/ECM/Bundle/HomeBundle/Resources/views/Default/index.html.twig
@@ -1,5 +1,13 @@
 {% extends 'ECMHomeBundle::layout.html.twig' %}
 
+
+{% block titre %}
+    <h1>Accueil</h1>
+{% endblock %}
+
 {% block body %}
-    Hello !
+    <div class="jumbotron">
+        <h1>Bienvenue !</h1>
+        <p>Le club d'echec de montpellier vous souhaite la bienvenue sur son nouveau site !</p>
+    </div>
 {% endblock %}
