--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,3 +1,8 @@
+html{
+    position: relative;
+    min-height: 100%;
+}
+
 .footer{
     position: absolute;
     bottom: 0;
@@ -6,4 +11,13 @@
     background-color: #f8f8f8;
     border-top: 1px solid #e7e7e7;
     padding-top: 5px;
+}
+
+.container{
+    margin-top: 20px;
+    padding-top: 10px;
+}
+
+#wrapper{
+    margin-bottom: 50px;
 }
