--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -28,6 +28,8 @@
             {% endblock %}
         </div>
         {% block body %}{% endblock %}
+        {% block sponsors %}
+        {% endblock %}
     </div>
         {% block footer %}
             <div class="footer">
