--- a/src/ECM/Bundle/HomeBundle/Resources/views/layout.html.twig
+++ b/src/ECM/Bundle/HomeBundle/Resources/views/layout.html.twig
@@ -2,3 +2,6 @@
 {% block titre %}{% endblock %}
 {% block body %}
 {% endblock %}
+{% block sponsors %}
+    {{ render(controller("ECMModuleBundle:Sponsor:showFront")) }}
+{% endblock %}
