--- a/src/ECM/Bundle/HomeBundle/Resources/views/Default/article-vitrine.html.twig
+++ b/src/ECM/Bundle/HomeBundle/Resources/views/Default/article-vitrine.html.twig
@@ -10,7 +10,7 @@
     <div class="row">
         <div class="col-lg-12">
             <p>
-                {{ article.corps }}
+                {{ article.corps | raw }}
             </p>
         </div>
     </div>
