--- a/src/ECM/Bundle/ArticleBundle/Resources/views/Default/modifier-article.html.twig
+++ b/src/ECM/Bundle/ArticleBundle/Resources/views/Default/modifier-article.html.twig
@@ -1,4 +1,8 @@
-{% extends 'ECMHomeBundle::layout.html.twig' %}
+{% extends 'ECMAdminBundle::layout.html.twig' %}
+
+{% block titre %}
+    Modifier un article
+{% endblock %}
 
 {% block body %}
 
