--- a/src/ECM/Bundle/ArticleBundle/Resources/views/Default/administration-articles.html.twig
+++ b/src/ECM/Bundle/ArticleBundle/Resources/views/Default/administration-articles.html.twig
@@ -1,4 +1,8 @@
-{% extends 'ECMHomeBundle::layout.html.twig' %}
+{% extends 'ECMAdminBundle::layout.html.twig' %}
+
+{% block titre %}
+    <h1>Administration des articles</h1>
+    {% endblock %}
 
 {% block body %}
 {% for article in articles %}
