--- a/src/ECM/Bundle/ModuleBundle/Resources/views/Sponsor/edit.html.twig
+++ b/src/ECM/Bundle/ModuleBundle/Resources/views/Sponsor/edit.html.twig
@@ -1,14 +1,17 @@
-{% extends '::base.html.twig' %}
+{% extends 'ECMAdminBundle::layout.html.twig' %}
+
+{% block titre %}
+    <h1>Éditer un sponsor</h1>
+{% endblock %}
 
 {% block body -%}
-    <h1>Sponsor edit</h1>
 
     {{ form(edit_form) }}
 
         <ul class="record_actions">
     <li>
         <a href="{{ path('admin_sponsor') }}">
-            Back to the list
+            Retourner à la liste
         </a>
     </li>
     <li>{{ form(delete_form) }}</li>
