--- a/src/ECM/Bundle/ModuleBundle/Resources/views/Sponsor/new.html.twig
+++ b/src/ECM/Bundle/ModuleBundle/Resources/views/Sponsor/new.html.twig
@@ -1,14 +1,17 @@
-{% extends '::base.html.twig' %}
+{% extends 'ECMAdminBundle::layout.html.twig' %}
+
+{% block titre %}
+    <h1>Création d'un sponsor</h1>
+{% endblock %}
 
 {% block body -%}
-    <h1>Sponsor creation</h1>
 
     {{ form(form) }}
 
         <ul class="record_actions">
     <li>
         <a href="{{ path('admin_sponsor') }}">
-            Back to the list
+            Retourner à la liste des sponsors
         </a>
     </li>
 </ul>
