--- a/src/ECM/Bundle/ModuleBundle/Resources/views/Sponsor/sponsorsFront.html.twig
+++ b/src/ECM/Bundle/ModuleBundle/Resources/views/Sponsor/sponsorsFront.html.twig
@@ -1,14 +1,14 @@
 
 {% block sponsors %}
-    <ul>
+    <ul class="nav nav-pills nav-stacked">
     {% for sponsor in sponsors %}
         <li>
         {% if sponsor.urlImage != "" %}
-        <a href="http://{{ sponsor.lien }}" target="_blank">
-            <img src="{{ asset('images/sponsors/' ~ sponsor.urlImage ) }}">
+        <a href="{{ sponsor.lien }}" target="_blank">
+            <img src="{{ asset('images/sponsors/' ~ sponsor.urlImage ) }}" class="img-thumbnail">
         </a>
         {% else %}
-        <a href="http://{{ sponsor.lien }}" target="_blank">
+        <a href="{{ sponsor.lien }}" target="_blank">
             {{ sponsor.titre }}
         </a>
         {% endif %}
