--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -10,7 +10,7 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
         <div class="logo col-lg-offset-1 col-lg-3">
             <a href="{{ path('ecm_home_homepage') }}"><img src="{{ asset('bundles/ecmhome/images/logo-ecmchess.png') }}" alt="Logo Ecmchess"></a>
@@ -31,13 +31,11 @@
                 {% block body %}{% endblock %}
         {% endblock %}
         {% block footer %}
+        </div>
             <div class="footer">
                 <div class="container">
                     <p>
                         ecmchess &copy; - 2014
-                    </p>
-                    <p class="pull-right">
-                        Développé par ...
                     </p>
                 </div>
             </div>
