--- a/src/ECM/Bundle/ModuleBundle/Resources/views/Sponsor/sponsorsFront.html.twig
+++ b/src/ECM/Bundle/ModuleBundle/Resources/views/Sponsor/sponsorsFront.html.twig
@@ -5,7 +5,7 @@
         <li>
         {% if sponsor.urlImage != "" %}
         <a href="{{ sponsor.lien }}" target="_blank">
-            <img src="{{ asset(sponsor.webPath) }}" class="img-thumbnail">
+            <img src="{{ asset(sponsor.webPath) }}" width="150" height="150" class="img-thumbnail">
             {#<img src="{{ asset('images/sponsor/' ~ sponsor.urlImage ) }}" class="img-thumbnail">#}
         </a>
         {% else %}
