--- a/src/ECM/Bundle/ArticleBundle/Resources/views/Default/show.html.twig
+++ b/src/ECM/Bundle/ArticleBundle/Resources/views/Default/show.html.twig
@@ -14,6 +14,7 @@
 
             <div class="row">
             <div class="col-lg-12">
+                <div>{{ article.titre }}</div>
                 <p>
                     {{ article.corps | raw }}
                 </p>
