--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -21,12 +21,13 @@
         <label for="password">{{ 'security.login.password'|trans }}</label>
         <input type="password" id="password" name="_password" required="required" class="form-control" />
         </div>
-        <div class="checkbox">
-        <label for="remember_me">{{ 'security.login.remember_me'|trans }}
-            <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-        </label>
+        {#<div class="checkbox">#}
+        {#<label for="remember_me">{{ 'security.login.remember_me'|trans }}#}
+            {#<input type="checkbox" id="remember_me" name="_remember_me" value="on" />#}
+        {#</label>#}
+        {#</div>#}
+        <div class="form-group">
+            <input class="btn btn-default form-control" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
         </div>
-
-        <input class="btn btn-default" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
     </form>
 {% endblock fos_user_content %}
