--- a/src/ECM/Bundle/AdminBundle/Resources/views/layout.html.twig
+++ b/src/ECM/Bundle/AdminBundle/Resources/views/layout.html.twig
@@ -1,22 +1,3 @@
-{% extends '::base.html.twig' %}
-
-{% block menu %}
-    <nav class="navbar navbar-default" role="navigation">
-            {{ knp_menu_render('mainAdmin', {'currentClass': 'active'}) }}
-    </nav>
-{% endblock %}
-{% block content %}
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="page-header">
-                <h1>
-                    {% block titre %}
-                    {% endblock %}
-                </h1>
-            </div>
-            {% block body %}
-            {% endblock %}
-
-        </div>
-    </div>
-{% endblock %}
+{% extends 'SonataAdminBundle::layout.html.twig' %}
+{% block body_attributes %}class="sonata-bc skin-blue fixed"{% endblock %}
+{% block side_bar_after_nav %}{% endblock %}
