--- a/src/ECM/Bundle/ArticleBundle/Resources/views/Default/show.html.twig
+++ b/src/ECM/Bundle/ArticleBundle/Resources/views/Default/show.html.twig
@@ -11,14 +11,14 @@
 
     {% block body %}
         {% for article in articles %}
-
             <div class="row">
             <div class="col-lg-12">
-                <div>{{ article.titre }}</div>
+                <h2>{{ article.titre }}</h2>
                 <p>
                     {{ article.corps | raw }}
                 </p>
             </div>
         </div>
+            <hr>
         {% endfor %}
     {% endblock %}
