--- a/app/Resources/less/bootstrap.less
+++ b/app/Resources/less/bootstrap.less
@@ -9,7 +9,7 @@
  */
 
 // Core variables and mixins
-@import "../BraincraftedBootstrapBundle/less//variables.less";
+//@import "../BraincraftedBootstrapBundle/less/variables.less";
 @import "../../../vendor/twbs/bootstrap/less/mixins.less";
 
 // Reset
