--- a/src/ECM/Bundle/ArticleBundle/Resources/views/Default/show.html.twig
+++ b/src/ECM/Bundle/ArticleBundle/Resources/views/Default/show.html.twig
@@ -3,22 +3,26 @@
 
 
 
-    {% block titre %}
-        <h1>{{ menu | upper }}</h1>
+{% block titre %}
+    <h1>{{ menu | upper }}</h1>
 
-    {% endblock %}
+{% endblock %}
 
 
-    {% block body %}
-        {% for article in articles %}
-            <div class="row">
+{% block body %}
+    {% for article in articles %}
+        <div class="row">
             <div class="col-lg-12">
+
+
+
                 <h2>{{ article.titre }}</h2>
                 <p>
                     {{ article.corps | raw }}
                 </p>
+                <div class="pull-right">{{ article.auteur }}</div>
             </div>
         </div>
-            <hr>
-        {% endfor %}
-    {% endblock %}
+        <hr>
+    {% endfor %}
+{% endblock %}
