--- a/src/ECM/Bundle/ArticleBundle/Resources/views/Article/edit.html.twig
+++ b/src/ECM/Bundle/ArticleBundle/Resources/views/Article/edit.html.twig
@@ -1,16 +1,21 @@
-{% extends '::base.html.twig' %}
+{% extends 'ECMHomeBundle::layout.html.twig' %}
 
 {% block body -%}
     <h1>Article edit</h1>
 
     {{ form(edit_form) }}
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('article') }}">
-            Back to the list
-        </a>
-    </li>
-    <li>{{ form(delete_form) }}</li>
-</ul>
+    <ul class="record_actions">
+
+        <li>
+            <a href="{{ path('ecm_articles_show_by_util') }}">
+                Retourner à la liste d'articles
+            </a>
+        </li>
+        <li>
+            <a href="{{ path('article_delete', { 'id': entity.id }) }}">
+                Supprimer
+            </a>
+        </li>
+    </ul>
 {% endblock %}
