--- a/src/ECM/Bundle/ArticleBundle/Resources/views/Article/index.html.twig
+++ b/src/ECM/Bundle/ArticleBundle/Resources/views/Article/index.html.twig
@@ -1,43 +1,37 @@
-{% extends '::base.html.twig' %}
+{% extends 'ECMHomeBundle::layout.html.twig' %}
 
 {% block body -%}
-    <h1>Article list</h1>
+    <h1>Liste Article</h1>
 
-    <table class="records_list">
+    <table class="table table-condensed">
         <thead>
             <tr>
-                <th>Id</th>
                 <th>Titre</th>
-                <th>Corps</th>
                 <th>Actions</th>
+                <th>Etat</th>
             </tr>
         </thead>
         <tbody>
-        {% for entity in entities %}
-            <tr>
-                <td><a href="{{ path('article_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
-                <td>{{ entity.titre }}</td>
-                <td>{{ entity.corps }}</td>
-                <td>
-                <ul>
-                    <li>
-                        <a href="{{ path('article_show', { 'id': entity.id }) }}">show</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('article_edit', { 'id': entity.id }) }}">edit</a>
-                    </li>
-                </ul>
-                </td>
-            </tr>
-        {% endfor %}
+            {% for entity in entities %}
+                <tr>
+                    <td>{{ entity.titre }}</td>
+
+
+                    
+
+                    <td>
+                        <ul>
+                            <li>
+                                <a href="{{ path('article_show', { 'id': entity.id }) }}">Voir / Modifier</a>
+                            </li>
+                            <li>
+                                <a href="{{ path('article_delete', { 'id': entity.id }) }}">Supprimer</a>
+                            </li>
+                        </ul>
+                    </td>
+                    <td>{{ entity.accepte}}</td>
+                </tr>
+            {% endfor %}
         </tbody>
     </table>
-
-        <ul>
-        <li>
-            <a href="{{ path('article_new') }}">
-                Create a new entry
-            </a>
-        </li>
-    </ul>
-    {% endblock %}
+{% endblock %}
