moderation/affichage articles

--- a/src/ECM/Bundle/ArticleBundle/Resources/views/Article/index.html.twig
+++ b/src/ECM/Bundle/ArticleBundle/Resources/views/Article/index.html.twig
@@ -8,6 +8,7 @@
         <tr>
             <th>Titre</th>
             <th>Actions</th>
+            <th>Menu</th>
             <th>Etat</th>
         </tr>
         </thead>
@@ -27,7 +28,8 @@
                         </li>
                     </ul>
                 </td>
-                <td>{{ entity.accepte }}</td>
+                <td>{{ entity.menu }}</td>
+                <td>{{ entity.nomEtat }}</td>
 
             </tr>
         {% endfor %}
