--- a/app/Resources/SonataAdminBundle/views/layout.html.twig
+++ b/app/Resources/SonataAdminBundle/views/layout.html.twig
@@ -18,3 +18,16 @@
     <script src="{{ asset('bundles/sonatamarkitup/markitup/markitup/sets/html/set.js') }}" type="text/javascript"></script>
     <script src="{{ asset('bundles/sonatamarkitup/markitup/markitup/sets/textile/set.js') }}" type="text/javascript"></script>
 {% endblock %}
+
+{% block logo %}
+    {% spaceless %}
+        <a class="logo" href="{{ url('ecm_home_homepage') }}">
+            {% if 'single_image' == admin_pool.getOption('title_mode') or 'both' == admin_pool.getOption('title_mode') %}
+                <img src="{{ asset(admin_pool.titlelogo) }}" alt="{{ admin_pool.title }}">
+            {% endif %}
+            {% if 'single_text' == admin_pool.getOption('title_mode') or 'both' == admin_pool.getOption('title_mode') %}
+                <span>{{ admin_pool.title }}</span>
+            {% endif %}
+        </a>
+    {% endspaceless %}
+{% endblock %}
