--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,47 +4,42 @@
         <meta charset="UTF-8" />
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
-            <link href="{{ asset('css/bootstrap.css') }}" rel="stylesheet" media="screen">
-            <link href="{{ asset('css/main.css') }}" rel="stylesheet" media="screen">
+            <link href="{{ asset('css/bootstrap.min.css') }}" rel="stylesheet" media="screen">
+            <link href="{{ asset('css/styles.css') }}" rel="stylesheet" media="screen">
         {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
-    <div class="container">
-        <div class="row">
-        <div class="logo col-lg-offset-1 col-lg-3">
-            <a href="{{ path('ecm_home_homepage') }}"><img src="{{ asset('bundles/ecmhome/images/logo-ecmchess.png') }}" alt="Logo Ecmchess"></a>
-        </div>
-        <div class="col-lg-8">
         {% block menu %}
             {% include '::menu.html.twig' %}
         {% endblock %}
-        </div>
-        </div>
-    </div>
     <div class="container" id="wrapper">
+        <div class="logo ">
+            <a href="{{ path('ecm_home_homepage') }}"><img src="{{ asset('bundles/ecmhome/images/logo-ecmchess.png') }}"
+                                                           alt="Logo Ecmchess"></a>
+
+            <div style="margin-left:100px;">Le grand club de la ville bleue</div>
+        </div>
         {% block content %}
-                {% block sponsors %}
-                {% endblock %}
-                    {% block titre %}
-                    {% endblock %}
+            {% block sponsors %}{% endblock %}
+            {% block titre %}{% endblock %}
                 {% block body %}{% endblock %}
         {% endblock %}
         {% block footer %}
-        </div>
+            <footer>
             <div class="footer">
                 <div class="container">
-                    <p>
                         ecmchess &copy; - 2014
-                    </p>
                 </div>
             </div>
+            </footer>
         {% endblock %}
         {% block javascripts %}
             <!-- jQuery (necessary for Bootstraps JavaScript plugins) -->
             <script src="{{ asset('js/jquery.js') }}"></script>
             <!-- Include all JavaScripts, compiled by Assetic -->
-            <script src="{{ asset('js/bootstrap.js') }}"></script>
+            <script src="{{ asset('js/bootstrap.min.js') }}"></script>
         {% endblock %}
+    </div>
     </body>
 </html>
