--- a/src/ECM/Bundle/ArticleBundle/Resources/views/Article/show.html.twig
+++ b/src/ECM/Bundle/ArticleBundle/Resources/views/Article/show.html.twig
@@ -3,7 +3,7 @@
 {% block body -%}
     <h1>Article</h1>
 
-    <table class="table table-striped">
+    <table class="table table-striped table-hover ">
         <tbody>
         <tr>
             <th>Titre</th>
@@ -13,6 +13,15 @@
             <th>Corps</th>
             <td>{{ entity.corps | raw }}</td>
         </tr>
+
+
+        {% if entity.estRefuse %}
+            <tr>
+                <th>Motif</th>
+                <td>{{ entity.motif }}</td>
+            </tr>
+
+        {% endif %}
 
         </tbody>
     </table>
