administration produits + catégories

--- a/src/ECM/Bundle/AdminBundle/Resources/views/layout.html.twig
+++ b/src/ECM/Bundle/AdminBundle/Resources/views/layout.html.twig
@@ -6,6 +6,6 @@
     {% for stylesheet in admin_pool.getOption('stylesheets', []) %}
         <link rel="stylesheet" type="text/css"  href="{{ asset(stylesheet) }}"  />
     {% endfor %}
-        <link rel="stylesheet" type="text/css" href="{{ asset('bundles/ecmadmin/css/style.css') }}"
+    <link rel="stylesheet" type="text/css" href="{{ asset('css/main.css') }}"
 
 {% endblock %}
