--- a/src/ECM/Bundle/ArticleBundle/Resources/views/Default/show.html.twig
+++ b/src/ECM/Bundle/ArticleBundle/Resources/views/Default/show.html.twig
@@ -23,7 +23,7 @@
                         </li>
                     {% endif %}
                     <li>
-                        <span><i class="glyphicon glyphicon-calendar"></i> {{ article.date | date('Y-m-d') }}</span>
+                        <span><i class="glyphicon glyphicon-calendar"></i> {{ article.date | date('d M Y') }}</span>
                     </li>
                 </ul>
             </div>
